--- a/front/angular.json
+++ b/front/angular.json
@@ -26,7 +26,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
               "./src/assets/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
