--- a/front/angular.json
+++ b/front/angular.json
@@ -43,10 +43,8 @@
               "./src/assets/node_modules/peity/jquery.peity.init.js"
             ],
             "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            }
+            "prerender": false,
+            "ssr": false
           },
           "configurations": {
             "production": {
